k8-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-2048
  namespace: game-2048
spec:
  replicas: 5
  selector:
    matchLabels:
      app: 2048-app
  template:
    metadata:
      labels:
        app: 2048-app
    spec:
      containers:
      - name: 2048-container
        image: public.ecr.aws/l6m2t8p7/2048:latest
        ports:
        - containerPort: 80
