k8-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-2048
  namespace: game-2048
spec:
  type: NodePort
  selector:
    app: 2048-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
